# csa_lab3

./: README.md  pyproject.toml
.github/workflows/: markdown.yaml
src/: isa.py  machine.py  translator.py
