[tool.poetry]
name = "csa-lab3"
version = "0.1.0"
description = ""
authors = ["Roman Sushenko <sushenkoroman2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-golden = "^0.2.2"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

